# PromptAgent

./: .gitignore  README.md  example_config.yaml  pyproject.toml  requirements.txt
src/: main.py  test.py  test_all_nodes.py  test_prompts.py
src/prompt_optim_agent/: __init__.py  agent.py  test_helper.py  utils.py
src/prompt_optim_agent/language_model/: __init__.py  ct_model.py  hf_text2text_model.py  hf_textgeneration_model.py  openai_model.py  palm_model.py  vllm.py
src/prompt_optim_agent/search_algo/: __init__.py  action_agent.py  ape.py  base_algo.py  beam_search.py  markov_chain.py  mcts.py
src/prompt_optim_agent/world_model/: __init__.py  ape_sampler.py  ape_world_model.py  beam_world_model.py  gradient_descent.py  gradient_descent_prompts.py  world_model.py
src/prompt_optim_agent/world_model/prompts/: __init__.py  ape_prompts.py  gradient_descent_prompts.py  log_prompt_templates.py  prompt_templates.py  world_model_prompts.py
src/tasks/: __init__.py  anachronisms.py  base_task.py  bigbench.py  biosses.py  cb.py  epistemic.py  gad.py  geo.py  gsm8k.py  med_qa.py  ncbi.py  object_counting.py  sst2.py  subj.py  trec.py  wic.py  wnli.py  wsc_fixed.py
